please just work for once

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ README.md
 options.txt
 usernamecache.json
 usercache.json
-./crash-reports
+/crash-reports
 minecraftinstance.json
 patchouli_data.json
-./fancymenu_data
-./fancymenu_instance_data
-./logs
-./local
+/fancymenu_data
+/fancymenu_instance_data
+/logs
+/local
