--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,10 @@ minecraftinstance.json
 patchouli_data.json
 /fancymenu_data
 /fancymenu_instance_data
+/fancymenu_setups
 /logs
 /local
+/config
+/defaultconfigs
+/downloads
+/patchouli_books
